# FundAlg

./: README.md
Laba_5/: associative_container.h  main.cpp
Laba_5/Task_11/: binary_search_tree.h  main.cpp
Laba_5/Task_2/: CMakeCache.txt  CMakeLists.txt  Makefile  allocate  cmake_install.cmake  log_allocate.txt  main.cpp  memory.h  memory_global_heap.cpp  memory_global_heap.h
Laba_5/logger/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  errors.txt  file2.txt  logger.cpp  logger_builder.h  logger_builder_concrete.cpp  logger_builder_concrete.h  logger_concrete.cpp  logger_concrete.h  main.cpp  pars.json  project
lab_1/: 1_1.c  1_2.c  1_4.c  1_6.c  1_7.c  1_8.c  1_9.c
lab_1/1_7/: app.c
lab_2/: 2_1.c  2_2.c  2_4.c  2_5.c  2_8.c
